--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:text="Войдите или зарегистрируйтесь!"
+        android:text="@string/login_or_sign_up"
         android:textSize="24sp"
         android:textStyle="bold" />
 
@@ -21,13 +21,13 @@
         android:id="@+id/loginEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Логин" />
+        android:hint="@string/login" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/passwordEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Пароль" />
+        android:hint="@string/password" />
 
     <TextView
         android:id="@+id/responseTextView"
@@ -41,19 +41,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/colorAccent"
-        android:text="Войти" />
+        android:text="@string/enter" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/forgetPasswordButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Забыл пароль" />
+        android:text="@string/forget_password" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/signInButton"
+        android:id="@+id/signUpButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Зарегистрироваться" />
+        android:text="@string/sign_up" />
 
     <ProgressBar
         android:id="@+id/progressBar"
